ubuntu-dev-tools (0.207) UNRELEASED; urgency=medium

  * Fix pull-lp-source --upload-queue (LP: #2110061)

 -- Dan Streetman <ddstreet@ieee.org>  Tue, 06 May 2025 13:25:22 -0400

ubuntu-dev-tools (0.206) unstable; urgency=medium

  [ Dan Bungert ]
  * mk-sbuild: enable pkgmaintainermangler

  [ Shengjing Zhu ]
  * import-bug-from-debian: package option is overridden and not used

  [ Fernando Bravo Hernández ]
  * Parsing arch parameter to getBinaryPackage() (LP: #2081861)

  [ Simon Quigley ]
  * Read ~/.devscripts in a more robust way, to ideally pick up multi-line
    variables (Closes: #725418).
  * mk-sbuild: default to using UTC for schroots (LP: #2097159).
  * syncpackage: s/syncblacklist/syncblocklist/g
  * syncpackage: Cache the sync blocklist in-memory, so it's not fetched
    multiple times when syncing more than one package.
  * syncpackage: Catch exceptions cleanly, simply skipping to the next
    package (erring on the side of caution) if there is an error doing the
    download (LP: #1943286).

 -- Simon Quigley <tsimonq2@debian.org>  Tue, 04 Mar 2025 13:43:15 -0600

ubuntu-dev-tools (0.205) unstable; urgency=medium

  * [syncpackage] When syncing multiple packages, if one of the packages is in
    the sync blocklist, do not exit, simply continue.
  * [syncpackage] Do not use exit(1) on an error or exception unless it
    applies to all packages, instead return None so we can continue to the
    next package.
  * [syncpackage] Add support for -y or --yes, noted that it should be used
    with care.
  * Update Standards-Version to 4.7.2, no changes needed.

 -- Simon Quigley <tsimonq2@debian.org>  Sat, 01 Mar 2025 11:29:54 -0600

ubuntu-dev-tools (0.204) unstable; urgency=medium

  [ Simon Quigley ]
  * Update Standards-Version to 4.7.1, no changes needed.
  * Add several Lintian overrides related to .pyc files.
  * Add my name to the copyright file.
  * Rename bitesize to lp-bitesize (Closes: #1076224).
  * Add a manpage for running-autopkgtests.